src/objects/Email_Queue__c.object
<CustomObject>
    <description>Custom object to queue email messages from APEX that will be processed by enterprise scheduled job to send emails thro SMTP services</description>
    <fields>
        <fullName>BccAddresses__c</fullName>
        <label>BccAddresses</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body_Plain_Text__c</fullName>
        <label>Body Plain Text</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Can_Process__c</fullName>
        <formula>IF( 
NOT ISPICKVAL(Status__c, &apos;Sent&apos;) 
&amp;&amp; NOT ISPICKVAL(Status__c, &apos;Error&apos;) 
&amp;&amp; NOT (ISPICKVAL(Status__c, &apos;InProgress&apos;) &amp;&amp; Status_Date_Time__c&gt; NOW()- (6/1440))
&amp;&amp; (No_Of_Tries__c=null || No_Of_Tries__c &lt; 3), 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CcAddresses__c</fullName>
        <label>CcAddresses</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>ErrorDescription</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsHTMLBody__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsHTMLBody</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Tries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Tries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Critical_Error_Desc__c</fullName>
        <label>Non Critical Error Desc</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Critical_Error_Type__c</fullName>
        <label>Non Critical Error Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Critical_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Critical Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddressId__c</fullName>
        <label>OrgWideEmailAddressId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyToAddress__c</fullName>
        <label>ReplyToAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaveAsActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SaveAsActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SenderDisplayName__c</fullName>
        <label>SenderDisplayName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date_Time__c</fullName>
        <label>Status Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ErrorSendingEmail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectId__c</fullName>
        <label>TargetObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectName__c</fullName>
        <label>TargetObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <description>Email To Addresses</description>
        <label>ToAddresses</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UseSenderDisplayName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseSenderDisplayName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatObjectId__c</fullName>
        <label>WhatObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatObjectName__c</fullName>
        <label>WhatObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Queue</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>IsHTMLBody__c</columns>
        <columns>No_Of_Tries__c</columns>
        <columns>SenderDisplayName__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>SaveAsActivity__c</columns>
        <columns>TemplateId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_DB</fullName>
        <columns>NAME</columns>
        <columns>IsHTMLBody__c</columns>
        <columns>No_Of_Tries__c</columns>
        <columns>SenderDisplayName__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>SaveAsActivity__c</columns>
        <columns>TemplateId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TargetObjectName__c</field>
            <operation>contains</operation>
            <value>Connect</value>
        </filters>
        <label>All - DB</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ErrorDescription__c</columns>
        <columns>No_Of_Tries__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>ToAddresses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Sent,Queued,InProgress</value>
        </filters>
        <label>All Errors</label>
    </listViews>
    <listViews>
        <fullName>All_not_sent</fullName>
        <columns>NAME</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ErrorDescription__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>No_Of_Tries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Sent</value>
        </filters>
        <label>All not sent</label>
    </listViews>
    <listViews>
        <fullName>Apex_Sharing</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>Apex Sharing</value>
        </filters>
        <label>Apex Sharing</label>
    </listViews>
    <listViews>
        <fullName>Blocker_Emails</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>BLOCKER</value>
        </filters>
        <label>Blocker Emails</label>
    </listViews>
    <listViews>
        <fullName>IBP</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>IBP Added</value>
        </filters>
        <label>IBP</label>
    </listViews>
    <listViews>
        <fullName>Queued</fullName>
        <columns>NAME</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>No_Of_Tries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Queued</value>
        </filters>
        <label>Queued</label>
    </listViews>
    <listViews>
        <fullName>Sent</fullName>
        <columns>NAME</columns>
        <columns>IsHTMLBody__c</columns>
        <columns>No_Of_Tries__c</columns>
        <columns>SenderDisplayName__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>SaveAsActivity__c</columns>
        <columns>TemplateId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Sent</label>
    </listViews>
    <listViews>
        <fullName>Sent_from_Marketing_Systems_Support</fullName>
        <columns>NAME</columns>
        <columns>IsHTMLBody__c</columns>
        <columns>No_Of_Tries__c</columns>
        <columns>SenderDisplayName__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>SaveAsActivity__c</columns>
        <columns>TemplateId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>FromAddress__c</field>
            <operation>equals</operation>
            <value>marketing_systems_support@ultimatesoftware.com</value>
        </filters>
        <label>Sent from Marketing Systems Support</label>
    </listViews>
    <listViews>
        <fullName>Sent_with_Non_Critical</fullName>
        <columns>NAME</columns>
        <columns>Status_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Non_Critical_Error__c</columns>
        <columns>Non_Critical_Error_Type__c</columns>
        <columns>Non_Critical_Error_Desc__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>No_Of_Tries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Non_Critical_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sent with Non Critical</label>
    </listViews>
    <listViews>
        <fullName>Sev_1</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>SEV 1</value>
        </filters>
        <label>SEV 1</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>ToAddresses__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today (DO NOT CHANGE)</label>
    </listViews>
    <listViews>
        <fullName>Tony_s_query_expire_requestst</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TargetObjectId__c</columns>
        <columns>TargetObjectName__c</columns>
        <columns>WhatObjectId__c</columns>
        <columns>WhatObjectName__c</columns>
        <columns>No_Of_Tries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/14/2015 12:00 AM</value>
        </filters>
        <label>Tony&apos;s query - expire requestst</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>05320506</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>E{0000000000}</displayFormat>
        <label>Email Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>